--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -12,5 +12,5 @@
 
 .button:hover {
   background: #15E2CF;
-  box-shadow: 0px 4px 19px -2px rgba(0, 255, 231, 0.53);
+  box-shadow: 0 4px 19px -2px rgba(0, 255, 231, 0.53);
 }
