--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -2,7 +2,7 @@
   padding: 10px 30px;
   font-size: 15px;
   border: none;
-  background: #00ead4;
+  background: #eeeeee;
   color: #fff;
   border-radius: 3px;
   transition: all 0.3s ease;
@@ -11,6 +11,6 @@
 }
 
 .button:hover {
-  background: #15E2CF;
+  background: #ffffff;
   box-shadow: 0 4px 19px -2px rgba(0, 255, 231, 0.53);
 }
