--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -9,11 +9,17 @@
   padding: 0;
 }
 
+.title{
+  font-size: 24px;
+  padding: 20px 50px 0 40px;
+}
+
 .link {
   display: block;
-  padding: 20px;
   background: #888888;
   color: black;
   z-index: 1;
   text-decoration: none;
+  padding: 10px;
+  margin-top: 20px
 }
